--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "expect": "^29.7.0",
-    "jest-mock": "^29.7.0"
+    "jest-mock": "^29.7.0",
+    "selenium-webdriver": "^4.18.1",
+    "mocha": "^10.2.0"
   }
 }
